# spp-explainability

./: .gitignore  .gitmodules  LICENSE  README.md  THIRD_PARTY_NOTICES.txt  mypy.ini  pyproject.toml  requirements.txt
data/: .gitignore
docs/: .gitignore  bibtex.bib  develop.md  develop.org
hooks/: pre-commit  pre-commit.sh  pre-push.sh
models/: .gitignore
scripts/: compare_dual_models_spp_cpu.sh  compare_dual_models_spp_gpu.sh  compare_model_pairs.sh  compare_model_pairs_gpu.sh  compare_model_pairs_spp_cpu.sh  compare_model_pairs_spp_gpu.sh  evaluate_regex.sh  evaluate_regex_gpu.sh  evaluate_regex_spp_cpu.sh  evaluate_regex_spp_gpu.sh  evaluate_spp.sh  evaluate_spp_cpu.sh  evaluate_spp_gpu.sh  evaluate_spp_grid.sh  evaluate_spp_grid_cpu.sh  evaluate_spp_grid_gpu.sh  explain_compress_regex.sh  explain_compress_regex_spp.sh  explain_compress_regex_spp_cpu.sh  explain_simplify_regex_spp_cpu.sh  explain_simplify_regex_spp_gpu.sh  explain_simplify_spp.sh  explain_simplify_spp_cpu.sh  explain_simplify_spp_gpu.sh  prepare_data.sh  prepare_git_hooks.sh  prepare_models.sh  preprocess_fmtod.sh  preprocess_multiclass_nlu.sh  setup_git_hooks.sh  test_typecheck.sh  train_resume_spp.sh  train_resume_spp_cpu.sh  train_resume_spp_gpu.sh  train_resume_spp_grid.sh  train_resume_spp_grid_cpu.sh  train_resume_spp_grid_gpu.sh  train_spp.sh  train_spp_cpu.sh  train_spp_gpu.sh  (+9 more)
src/: arg_parser.py  argparse_formatter.py  compare_dual_models_spp.py  compare_model_pairs.py  compare_model_pairs_spp.py  evaluate_regex.py  evaluate_regex_spp.py  evaluate_spp.py  explain_compress_regex.py  (+26 more)
(+46 files in other folders)
