[tool.poetry]
name = "explainable-nlp"
version = "0.1.0"
description = ""
authors = ["Atreya Shankar <35427332+atreyasha@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "1.13.1"
tensorboardx = "0.8"
torch = "1.0.0"
torchvision = "0.2.1"
mkl = "2018.0.0"

[tool.poetry.dev-dependencies]
ipython = "7.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
