[tool.poetry]
name = "soft-patterns-pp"
version = "0.1.0"
description = ""
authors = ["Atreya Shankar <35427332+atreyasha@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.19.4"
tensorboardx = "^2.1"
torch = "^1.7.0"
nltk = "^3.5"
tensorboard = "^2.4.0"

[tool.poetry.dev-dependencies]
ipython = "7.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
