[tool.poetry]
name = "spp-explainability"
version = "0.1.0"
description = ""
authors = ["Atreya Shankar <35427332+atreyasha@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
tensorboardx = "^2.1"
torch = "1.7.0"
nltk = "^3.5"
tqdm = "^4.54.1"
tensorboard = "^2.4.0"
scikit-learn = "^0.24.0"
matplotlib = "^3.3.4"
graphviz = "^0.16"
urllib3 = "1.26.3"

[tool.poetry.dev-dependencies]
ipython = "7.11.0"
mypy = "0.790"
ipdb = "^0.13.4"
snakeviz = "^2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
